sty;e: styled invalid inputs

--- a/input.css
+++ b/input.css
@@ -22,5 +22,9 @@ hr {
     color: hsl(0, 0%, 86%);
 }
 
+.input-invalid {
+  @apply invalid:focus:outline-primary-red
+}
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
