--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,10 @@ hr {
   color: hsl(0, 0%, 86%);
 }
 
+.input-invalid:focus:invalid {
+  outline-color: hsl(0, 100%, 67%);
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
